commiting changes i made

--- a/folder3/three.html
+++ b/folder3/three.html
@@ -1,16 +1,17 @@
 <!doctype html>
 <html>
 <head>
-  <link href="style.css" rel="stylesheet">
+
    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.googleapis.com">  
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="style.css" rel="stylesheet"> 
   <title>03.3 Google Fonts: Louise's Web Site</title>
 </head>
 
 <body>
   <h1>Welcome to Louise's web site!</h1>
-  <p><img src="http://dev.robkovacs.com/louise.jpg"></p>
+  <img src="https://cdn.pixabay.com/photo/2020/07/03/06/10/nile-5365318__480.jpg">
   <p>Hi! My name is Louise. I am 3 years old. I am a maltipoo (half Maltese and half poodle). I live in Brooklyn, NY.</p>
   <h2>Things I like:</h2>
   <ul>
